--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "start:classes": "tsc basics/classes.ts --outdir dist/ && node dist/classes.js",
     "start:interfaceVSclasses": "tsc basics/interfaceVSclasses.ts --outdir dist/ && node dist/interfaceVSclasses.js",
     "start:functions": "tsc basics/functions.ts --outdir dist/ && node dist/functions.js",
+    "start:namespace": "tsc advanced/namespaces/namespaces.ts --outFile dist/namespace.js && node dist/namespace.js",
+    "start:namespaces": "tsc advanced/namespaces/namespaces.ts advanced/namespaces/index.ts --outFile dist/namespaces.js && node dist/namespaces.js",
+    "start:modules": "tsc advanced/modules/index.ts --outdir dist/modules && node dist/modules.js",
+    "start:generics": "tsc advanced/generic.ts --outdir dist/ && node dist/generic.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
